action("generate_xwalk_runtime_client_version") {
  script = "build/android/generate_runtime_client_version.py"
  args = [
    "--template=app/android/runtime_client/src/templates/XWalkRuntimeClientVersion.template",
    "--output=$root_gen_dir/version_java/XWalkRuntimeClientVersion.java",
    "--xwalk-version=$xwalk_version",
  ]
  outputs = [
    "$root_gen_dir/version_java/XWalkRuntimeClientVersion.java"
  ]
}

android_apk("xwalk_app_hello_world_apk") {
  deps = [
    ":xwalk_app_hello_world_apk_copy",
    "xwalk_app_runtime_java",
  ]
  apk_name = "XWalkAppHelloWorld"
  DEPRECATED_java_in_dir = "app/android/app_hello_world"
  resource_dir = "app/android/app_hello_world/res"
  data_deps = [
    "$root_out_dir/app_hello_world/assets/www/index.html",
    "$root_out_dir/app_hello_world/assets/www/sampapp-icon-helloworld.png",
  ]
}

copy("xwalk_app_hello_world_apk_copy") {
  outputs = "$root_out_dir/app_hello_world/assets/www/{{source_file_part}}"
  sources = [
    "test/android/data/index.html",
    "test/android/data/sampapp-icon-helloworld.png",
  ]
}

android_apk("xwalk_app_template_apk") {
  deps = [
    "xwalk_app_runtime_java",
    ":xwalk_app_template_apk_copy"
  ]
  apk_name = "XWalkAppTemplate"
  DEPRECATED_java_in_dir = "app/android/app_template"
  resource_dir = "app/android/app_template/res"
  data_deps = [
    "$root_out_dir/app_template/assets/www/index.html",
    "$root_out_dir/app_template/assets/www/sampapp-icon-helloworld.png",
  ]
  asset_location = "$root_out_dir/app_template/assets"
}

copy("xwalk_app_template_apk_copy") {
  outputs = "$root_out_dir/app_template/assets/www/{{source_file_part}}"
  sources = [
    "test/android/data/index.html",
    "test/android/data/sampapp-icon-helloworld.png",
  ]
}

android_library("xwalk_app_runtime_java") {
  deps = [
        ":generate_xwalk_runtime_client_version",
        ":xwalk_core_java",
  ]
  DEPRECATED_java_in_dir": "app/android/runtime_activity",
#        "additional_src_dirs": [
#          "app/android/runtime_client",
#        ],
#        "generated_src_dirs": [ "<(SHARED_INTERMEDIATE_DIR)/version_java" ],
}

action("prepare_xwalk_app_template") {
  script = "build/android/generate_app_packaging_tool.py"
  outputs = [
    "$root_out_dir/prepare_xwalk_app_template_intermediate/always_run"
  ]
  args = [
    "$root_out_dir/xwalk_app_template"
  ]
}

action("xwalk_app_template") {
  deps = [
    ":prepare_xwalk_app_template"
  ]
  script = "tools/tar.py" 
  outputs = [
    "$root_out_dir/xwalk_app_template.tar.gz",
    "$root_out_dir/xwalk_app_template_intermediate/always_run",
  ]
  args = [
    "$root_out_dir/xwalk_app_template"
  ]
}
